--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^11.1.0",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
